Enhance repository methods with custom queries for fetching related entities
- Added custom query methods in various repository interfaces to fetch related entities, improving data retrieval efficiency.
- Updated service layer methods to utilize the new repository methods for fetching data with relationships.
- Adjusted unit tests to reflect changes in repository method calls, ensuring proper functionality and coverage.