@@ -60,7 +60,7 @@ class IngredientsServiceTest {
 
     @Test
     void enregistrerAchatEntree_ok_etCaisse() {
-        when(ingredientsRepository.findById(1L)).thenReturn(Optional.of(ingredient));
+        when(ingredientsRepository.findByIdWithRelations(1L)).thenReturn(Optional.of(ingredient));
         when(historiqueRepo.save(any())).thenAnswer(inv -> inv.getArgument(0));
         when(typeMvtRepo.findByLibelleIgnoreCase(anyString())).thenReturn(Optional.of(typeMvt("Entrée")));
         when(inventaireRepo.save(any())).thenAnswer(inv -> inv.getArgument(0));
@@ -78,7 +78,7 @@ class IngredientsServiceTest {
 
     @Test
     void enregistrerAchatEntree_peremptionAvantEntree() {
-        when(ingredientsRepository.findById(1L)).thenReturn(Optional.of(ingredient));
+        when(ingredientsRepository.findByIdWithRelations(1L)).thenReturn(Optional.of(ingredient));
         assertThatThrownBy(() -> ingredientsService.enregistrerAchatEntree(
                 1L, LocalDate.of(2026, 2, 1), LocalDate.of(2026, 1, 1),
                 new BigDecimal("1"), BigDecimal.ZERO))
@@ -88,7 +88,7 @@ class IngredientsServiceTest {
 
     @Test
     void enregistrerSortie_stockInsuffisant() {
-        when(ingredientsRepository.findById(1L)).thenReturn(Optional.of(ingredient));
+        when(ingredientsRepository.findByIdWithRelations(1L)).thenReturn(Optional.of(ingredient));
         when(etatStockRepo.findTopByIngredient_IdOrderByDateEtatStockDescIdDesc(1L))
                 .thenReturn(Optional.of(etat(new BigDecimal("2"))));
 
@@ -100,7 +100,7 @@ class IngredientsServiceTest {
 
     @Test
     void enregistrerSortie_ok() {
-        when(ingredientsRepository.findById(1L)).thenReturn(Optional.of(ingredient));
+        when(ingredientsRepository.findByIdWithRelations(1L)).thenReturn(Optional.of(ingredient));
         when(etatStockRepo.findTopByIngredient_IdOrderByDateEtatStockDescIdDesc(1L))
                 .thenReturn(Optional.of(etat(new BigDecimal("10"))));
         when(typeMvtRepo.findByLibelleIgnoreCase(anyString())).thenReturn(Optional.of(typeMvt("Sortie")));
@@ -116,7 +116,7 @@ class IngredientsServiceTest {
 
     @Test
     void reintegrerStock_sansCaisse() {
-        when(ingredientsRepository.findById(1L)).thenReturn(Optional.of(ingredient));
+        when(ingredientsRepository.findByIdWithRelations(1L)).thenReturn(Optional.of(ingredient));
         when(typeMvtRepo.findByLibelleIgnoreCase(anyString())).thenReturn(Optional.of(typeMvt("Entrée")));
         when(inventaireRepo.save(any())).thenAnswer(inv -> inv.getArgument(0));
         when(etatStockRepo.findTopByIngredient_IdOrderByDateEtatStockDescIdDesc(1L))
@@ -131,9 +131,9 @@ class IngredientsServiceTest {
 
     @Test
     void getGlobalStockState_alerteSeuil() {
-        when(ingredientsRepository.findAll()).thenReturn(List.of(ingredient));
-        when(etatStockRepo.findTopByIngredient_IdOrderByDateEtatStockDescIdDesc(1L))
-                .thenReturn(Optional.of(etat(new BigDecimal("3"))));
+        when(ingredientsRepository.findAllWithRelations()).thenReturn(List.of(ingredient));
+        when(etatStockRepo.findLatestQuantiteByIngredient())
+                .thenReturn(java.util.Collections.singletonList(new Object[]{1L, 3.0}));
 
         List<IngredientStockDTO> stocks = ingredientsService.getGlobalStockState();
         assertThat(stocks).hasSize(1);
